--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 .left {
     flex-basis: 50%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
 }
 
@@ -32,7 +32,7 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
-    font-size: 15px;
+    font-size: 10px;
     font-weight: 500;
 }
 
@@ -62,34 +62,72 @@ body {
 
 .right {
     flex-basis: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
-.sec {
-
-}
 
 .s1 {
     height: 35%;
-    background-color: gray;
+    background-color: rgb(247, 247, 247);
+    padding-top: 10%;
+    padding-left: 3%;
 
 }
 
-.sec {
-    border: 1px solid black;
-}
 .s2 {
-    height: 30%;
-    background-color: green;
+    height: auto;
+}
+
+.s2 p {
+    margin-left: 3%;
+    margin-top: 2%;
+    font-size: 1.5rem;
 }
 .firstp {
     margin-bottom: 30px;
 }
 
+.firstp, .secondp {
+    font-weight: 550;
+}
+
+
+.form-wrapper {
+    display: flex;
+    margin-left: 3%;
+    margin-top: 3%;
+    flex-wrap: wrap;
+    gap: 70px;
+}
+
+.col1 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.col2 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+label {
+    font-size: small;
+    letter-spacing: 1px;
+    font-weight: 550;
+    color: rgb(112, 111, 111);
+}
+
+input {
+    width: 250px;
+}
 
 @media (max-width: 400px) {
     body {
         flex-direction: column;
     }
 }
+
+
 
